<?xml version="1.0" encoding="utf-8"?>
<!--
 ShoLi, a simple tool to produce short (shopping) lists.

 Copyright (C) 2013,2014,2015  David Soulayrol

 ShoLi is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ShoLi is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">ShoLi</string>

    <!-- Menu options -->
    <string name="action_erase">Erase</string>
    <string name="action_edit_erase_all">Erase All</string>
    <string name="action_checking_check_all">Check All</string>
    <string name="action_checking_edit">Edit</string>
    <string name="action_checking_empty">Remove All Items</string>
    <string name="action_checking_menu">Action</string>
    <string name="action_checking_remove_checked">Remove Checked Items</string>
    <string name="action_checking_uncheck_all">Uncheck All</string>
    <string name="action_main_about">About</string>
    <string name="action_main_data_overview">Data Overview</string>
    <string name="action_main_settings">Settings</string>

    <!-- Dialog messages -->
    <string name="dialog_about_version">Version %1$s (code iteration: %2$d)</string>
    <string name="dialog_about_copyright">Copyright &#169; 2013-2015 David Soulayrol</string>
    <string name="dialog_about_description">A simple <i>sho</i>rt <i>li</i>sts manager</string>
    <string name="dialog_about_license">This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.\nSee http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="dialog_about_icon">The icon is derived from <tt>List-Icon.svg</tt> which is available under an open license on <i>Wikimedia Commons</i>.</string>
    <string name="dialog_about_title">About ShoLi</string>
    <string name="dialog_erase_all_message">This cannot be undone. Continue?</string>
    <string name="dialog_erase_all_title">Erase All</string>
    <string name="dialog_checking_confirm_remove_checked">Remove checked items?</string>
    <string name="dialog_checking_confirm_remove_all">Empty the list?</string>

    <!-- Settings -->
    <string name="activity_settings_title">Settings</string>
    <string name="settings_category_checking">Checking</string>
    <string name="settings_category_import">Import/Export</string>
    <string name="settings_category_others">Others</string>
    <string name="settings_checking_fling_to_left_action">Action on swipe to left</string>
    <string name="settings_checking_fling_to_right_action">Action on swipe to right</string>
    <string name="settings_checking_action_dlg_title">Choose action</string>
    <string name="settings_checking_confirm_remove_checked_action">Confirm removing checked items</string>
    <string name="settings_checking_confirm_remove_all_action">Confirm removing all items</string>
    <string name="settings_items_size_title">List items text size</string>
    <string name="settings_import_marker_checked_title">Marker for checked items</string>
    <string name="settings_import_marker_unchecked_title">Marker for unchecked items</string>
    <string name="settings_import_marker_offlist_title">Marker for unlisted items</string>
    <string name="settings_import_merge_policy_title">Merge policy on import</string>
    <string name="settings_import_dlg_title">On import</string>
    <string-array name="settings_checking_actions_choices">
        <item>None</item>
        <item>Check all</item>
        <item>Uncheck all</item>
        <item>Check or uncheck all</item>
        <item>Uncheck or check all</item>
        <item>Remove checked items</item>
        <item>Remove all</item>
    </string-array>
    <string-array name="settings_import_choices">
        <item>Keep items current status</item>
        <item>Apply imported status</item>
    </string-array>

    <!-- UI elements -->
    <string name="fragment_checking_list_empty">List is empty</string>
    <string name="fragment_edit_list_empty">No items</string>
    <string name="fragment_edit_add_button">Add</string>
    <string name="fragment_edit_input_hint">Item Name</string>
    <string name="fragment_edit_selection_mode_title">Select Items</string>
    <string name="fragment_edit_title">Editing list</string>

    <string name="activity_data_title">Data overview</string>
    <string name="fragment_data_introduction">Analysing database…</string>
    <string name="fragment_data_import_introduction">Analysing data…</string>
    <string name="fragment_data_import_conclusion">Import completed.</string>
    <string name="fragment_data_export_text">The content of database can be exported using Email, SMS, or any application accepting text content.</string>
    <string name="fragment_data_export_button">Export</string>
    <string name="fragment_data_export_subject">Sholi Database Content</string>
    <string name="fragment_data_erase_text">Erase the entire content of the database. This operation is not reversible.</string>
    <string name="fragment_data_erase_button">Erase All</string>

    <string name="fragment_settings_marker_error">Marker is invalid</string>

    <!-- Zero is not working as expected in plurals.
         See http://code.google.com/p/android/issues/detail?id=8287 -->
    <plurals name="fragment_data_overview_text">
        <item quantity="zero">The database is empty.</item>
        <item quantity="one">There is %d item in database.</item>
        <item quantity="other">There are %d items in database.</item>
    </plurals>
    <plurals name="fragment_data_import_text">
        <item quantity="zero">The data did not contain any list.</item>
        <item quantity="one">Handling %d item.</item>
        <item quantity="other">Handling %d items.</item>
    </plurals>
    <plurals name="fragment_data_import_success_text">
        <item quantity="zero">No item was imported</item>
        <item quantity="one">%d item imported</item>
        <item quantity="other">%d items imported</item>
    </plurals>
    <plurals name="fragment_data_import_ignored_text">
        <item quantity="zero">.</item>
        <item quantity="one">, %d item ignored.</item>
        <item quantity="other">, %d items ignored.</item>
    </plurals>
    <plurals name="action_check">
        <item quantity="zero">No item was checked</item>
        <item quantity="one">Checked %d item</item>
        <item quantity="other">Checked %d items</item>
    </plurals>
    <plurals name="action_uncheck">
        <item quantity="zero">No item was unchecked</item>
        <item quantity="one">Unchecked %d item</item>
        <item quantity="other">Unchecked %d items</item>
    </plurals>
    <plurals name="action_remove">
        <item quantity="zero">No item was removed</item>
        <item quantity="one">Removed %d item</item>
        <item quantity="other">Removed %d items</item>
    </plurals>

    <plurals name="selectedItems">
        <item quantity="one">One item selected.</item>
        <item quantity="other">%d items selected.</item>
    </plurals>

</resources>
