<?xml version="1.0" encoding="utf-8"?>
<!--
 ShoLi, a simple tool to produce short (shopping) lists.

 Copyright (C) 2013  David Soulayrol

 ShoLi is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ShoLi is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView style="@style/AboutDlgText.Top"
        android:text="@string/dialog_about_description" />

    <TextView style="@style/AboutDlgText.Withdrawn"
        android:id="@+id/version_text"
        android:text="@string/dialog_about_version" />

    <TextView style="@style/AboutDlgText"
        android:text="@string/dialog_about_copyright" />

    <TextView style="@style/AboutDlgText.Withdrawn"
        android:text="@string/dialog_about_license" />

    <TextView style="@style/AboutDlgText.Withdrawn"
        android:text="@string/dialog_about_icon" />

</LinearLayout>