<!--
 ShoLi, a simple tool to produce short (shopping) lists.

 Copyright (C) 2013  David Soulayrol

 ShoLi is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ShoLi is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_checking_edit"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_check_all"
        android:title="@string/action_checking_check_all"
        android:orderInCategory="10"
        android:showAsAction="never" />

    <item android:id="@+id/action_uncheck_all"
        android:title="@string/action_checking_uncheck_all"
        android:orderInCategory="20" />

    <item android:id="@+id/action_remove_checked"
        android:title="@string/action_checking_remove_checked"
        android:orderInCategory="30" />

    <item android:id="@+id/action_empty"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_checking_empty"
        android:orderInCategory="40"
        android:showAsAction="never" />

</menu>
