<!--
 ShoLi, a simple tool to produce short (shopping) lists.

 Copyright (C) 2013  David Soulayrol

 ShoLi is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ShoLi is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_main_settings"
        android:orderInCategory="80"
        android:showAsAction="never" />

    <item android:id="@+id/action_data_overview"
        android:title="@string/action_main_data_overview"
        android:orderInCategory="90"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_main_about"
        android:orderInCategory="1000"
        android:showAsAction="never" />
</menu>
