<!--
 ShoLi, a simple tool to produce short (shopping) lists.

 Copyright (C) 2013  David Soulayrol

 ShoLi is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ShoLi is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/list_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fragment_edit_input_hint"
            android:inputType="textShortMessage|textCapSentences"
            android:editable="true" />

        <Button
            android:id="@+id/list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_edit_add_button"
            android:enabled="false" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/z_list_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fragment_edit_list_empty" />
    </FrameLayout>



</LinearLayout>
